syntax="proto3";

package calculator;
option go_package="calculatorpb";


message CalculatorRequest{
    int32 first = 1;
    int32 second = 10;
}
message CalculatorResponse{
    int32 result = 1;
}
message PrimeNumberDecompositionRequest{
    int64 number =1;
}
message PrimeNumberDecompositionResponse{
    int64 prime_factor = 1;
}
message ComputeAverageRequest{
    int32 number = 1;
}
message ComputeAverageResponse{
    double average = 1;
}
service CalculatorService{
    //unary
    rpc Calculator(CalculatorRequest) returns (CalculatorResponse);
    //server streaming
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
}
